@@ -1,5 +1,14 @@
 2012-09-21  Filip Pizlo  <fpizlo@apple.com>
 
+        Unreviewed, fix ARM build.
+
+        * assembler/MacroAssemblerARMv7.h:
+        (JSC::MacroAssemblerARMv7::store8):
+        (MacroAssemblerARMv7):
+        * offlineasm/armv7.rb:
+
+2012-09-21  Filip Pizlo  <fpizlo@apple.com>
+
         REGRESSION (r128400): Opening Google Web Fonts page hangs or crashes
         https://bugs.webkit.org/show_bug.cgi?id=97328
 
